--- a/Vido/Vido.csproj
+++ b/Vido/Vido.csproj
@@ -11,7 +11,7 @@
     <RootNamespace>Vido</RootNamespace>
     <AssemblyName>Vido</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
+    <TargetFrameworkProfile>Profile5</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
@@ -48,10 +48,16 @@
     <Compile Include="NoopPrinter.cs" />
     <Compile Include="Qms\Direction.cs" />
     <Compile Include="DataInArgs.cs" />
-    <Compile Include="Qms\IEntryReporter.cs" />
+    <Compile Include="Qms\Exceptions\CaptureImageFailedException.cs" />
+    <Compile Include="Qms\Exceptions\EntryBlockedException.cs" />
+    <Compile Include="Qms\Exceptions\RecorderFullException.cs" />
+    <Compile Include="Qms\Exceptions\InvalidUniqueIdException.cs" />
+    <Compile Include="Qms\Exceptions\SaveImageFailedException.cs" />
+    <Compile Include="Qms\Exceptions\SystemErrorException.cs" />
+    <Compile Include="Qms\Exceptions\WriteDataFailedException.cs" />
     <Compile Include="Qms\NewMessageArgs.cs" />
-    <Compile Include="Qms\Queue.cs" />
-    <Compile Include="Qms\ReporterServices.cs" />
+    <Compile Include="Qms\ConsumerQueue.cs" />
+    <Compile Include="Qms\ControllerServices.cs" />
     <Compile Include="Qms\SavedImagesArgs.cs" />
     <Compile Include="Qms\EntryArgs.cs" />
     <Compile Include="Qms\IEntryRecorder.cs" />
@@ -65,7 +71,7 @@
     <Compile Include="Qms\Entry.cs" />
     <Compile Include="IInputDevice.cs" />
     <Compile Include="IInputDeviceList.cs" />
-    <Compile Include="Qms\EntryReporter.cs" />
+    <Compile Include="Qms\GateController.cs" />
     <Compile Include="Qms\RandomUniqueIdStorage.cs" />
     <Compile Include="Qms\TaskState.cs" />
     <Compile Include="Qms\UniqueId.cs" />
